# financial-advisor

./: .gitignore  README.md
infrastructure/aks/: entrypoint.sh  terminate.sh
infrastructure/aks/data-collection/: data-collection-deployment.yml  data-collection-service.yml  endpoint-trigger-bonds.yml  endpoint-trigger-commodities.yml  endpoint-trigger-mutual-funds-sector-and-index.yml  endpoint-trigger-stocks-america-north.yml  endpoint-trigger-stocks-europe.yml
infrastructure/aks/feature-selection/: feature-selection-deployment.yml
infrastructure/aks/kafka/: kafka-cluster.yml
infrastructure/k8s/data_collection/: data-collection-deployment.yml  data-collection-service.yml
infrastructure/k8s/endpoint-triggers/: endpoint-trigger-bonds-europe.yml  endpoint-trigger-commodities.yml  endpoint-trigger-mutual-funds-nonus-and-bonds.yml  endpoint-trigger-mutual-funds-thematic-and-alternative  endpoint-trigger.yml
infrastructure/k8s/feature_selection/: feature-selection-deployment.yml
infrastructure/k8s/kafka/: kafka-setup.sh
infrastructure/minikube/data_collection/: data-collection-config.yml  data-collection-deployment.yml
infrastructure/minikube/endpoint-triggers/: endpoint-trigger-bonds.yml  endpoint-trigger-mutual-funds-sector-and-index.yml  endpoint-trigger-stocks-america-north.yml  hpa.yml
services/: docker-compose.yml
services/customer_profiling/: Dockerfile  app.py  pyproject.toml
services/customer_profiling/fallback/: main.py
services/customer_profiling/notebooks/: fallback.ipynb  goal_evaluator.ipynb  preferences.ipynb  router.ipynb
services/customer_profiling/preferences/: main.py
services/customer_profiling/prompt_repository/: accept_system_template.txt  achievable_template.txt  refuse_system_template.txt  smt_template.txt
services/customer_profiling/router/: main.py
services/customer_profiling/smart/: agent.py  chains.py  main.py  structured_output.py  tools.py  workflow.py
services/data-collection/: config.json  config_etf.json  config_stock.json  logger.py
services/data-collection/config/: config_mutual_funds.json
services/data_collection/: .dockerignore  Dockerfile  build.ps1  build.sh  logger.py  pyproject.toml  requirements.txt
services/data_collection/config/: config_etf.json  config_mutual_funds.json  config_stock.json
services/data_collection/main/: main.py
services/data_collection/main/core/gateways/: kafka.py  kafka_gateway.py
services/data_collection/main/core/models/: equity_international_model.py  equity_us_model.py  etf_model.py  stock_model.py
services/data_collection/main/core/models/mutual_funds/: alternative_fund_model.py  bond_fund_model.py
services/data_collection/main/dependencies/: kafka.py
services/data_collection/main/routers/: bond_funds_routers.py  bonds_router.py  commodities_router.py  equity_international_funds_routers.py  equity_us_funds_routers.py  etf_routers.py  mutual_funds_router.py  stock_router.py  stocks_routers.py
services/data_collection/scripts/: bonds_scraper.py  commodities.py  etf_scraper.py  mutual_funds_scraper.py  scrape_bonds.py  stock_scraper.py
services/data_preparation/: Dockerfile  build.sh  log4j.properties  main.py  requirements.txt
services/feature_selection/: Dockerfile  app.py  build.ps1  pyproject.toml  requirements.txt
services/feature_selection/app/: __init__.py
services/feature_selection/bronze/: __main__.py
services/feature_selection/silver/: __init__.py
services/risk_aversion_estimator/: Dockerfile  config.json  main.py  pyproject.toml  requirements.txt
services/risk_aversion_estimator/mlflow_tracking/: mlflow_setup.py
services/risk_aversion_estimator/src/: process.py  train.py
services/user_interface/: Dockerfile  app.py  pyproject.toml
services/user_interface/static/: style.css
services/user_interface/templates/: form.html  layout.html  result.html
(+11 files in other folders)
