[tool.poetry]
name = "data-collection"
version = "0.1.0"
description = ""
authors = ["Andolsi-Hamza05 <hamza.landolsi@essai.ucar.tn>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
confluent-kafka = "^2.5.0"
pandas = "^2.2.2"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
selenium = "^4.23.1"
ipykernel = "^6.29.5"
kafka = "^1.3.5"
pydantic = "^2.8.2"
fastapi = "^0.112.1"
aiokafka = "^0.11.0"
uvicorn = "^0.30.6"
kafka-python = "^2.0.2"
six = "^1.16.0"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

