[tool.poetry]
name = "feature-selection"
version = "0.1.0"
description = ""
authors = ["Andolsi-Hamza05 <hamza.landolsi@essai.ucar.tn>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
databricks-connect = "^15.4.0"
databricks-cli = "^0.18.0"
python-dotenv = "^1.0.1"
kafka-python = "^2.0.2"
six = "^1.16.0"
kafka-python-ng = "^2.2.2"
pyspark = "^3.5.2"
delta-spark = "^3.2.0"
azure-storage-blob = "^12.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
