[tool.poetry]
name = "user-interface"
version = "0.1.0"
description = ""
authors = ["Andolsi-Hamza05 <hamza.landolsi@essai.ucar.tn>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
